@@ -1,0 +1,5 @@
+#Thu Jan 17 07:52:48 EST 2008
+eclipse.preferences.version=1
+formatter_profile=_jmdns
+formatter_settings_version=11
+org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
